# ChangeLog for dev-ruby/authlogic
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2

  24 Jun 2011; Hans de Graaff <graaff@gentoo.org> -authlogic-2.1.6.ebuild,
  -authlogic-2.1.6-r1.ebuild:
  Remove old versions.

*authlogic-2.1.6-r2 (14 Feb 2011)

  14 Feb 2011; Hans de Graaff <graaff@gentoo.org>
  +authlogic-2.1.6-r2.ebuild, +files/authlogic-2.1.6-quote-email.patch:
  Quotes are a valid component of the email name. Fixed and submitted
  upstream.

*authlogic-2.1.6-r1 (14 Feb 2011)

  14 Feb 2011; Hans de Graaff <graaff@gentoo.org>
  +authlogic-2.1.6-r1.ebuild, +files/authlogic-2.1.6-rails3-1.patch,
  +files/authlogic-2.1.6-rails3-2.patch:
  Add upstream patches for Rails 3 compatibility.

  07 Jan 2011; Hans de Graaff <graaff@gentoo.org> authlogic-2.1.6.ebuild:
  Keyword ~x86-macos.

  03 Sep 2010; Hans de Graaff <graaff@gentoo.org> -authlogic-2.1.3.ebuild,
  -authlogic-2.1.5.ebuild:
  Remove old versions.

*authlogic-2.1.6 (05 Aug 2010)

  05 Aug 2010; Hans de Graaff <graaff@gentoo.org> +authlogic-2.1.6.ebuild,
  metadata.xml:
  Verson bump with bug fix for characters in tokens.

*authlogic-2.1.5 (27 May 2010)

  27 May 2010; Hans de Graaff <graaff@gentoo.org> +authlogic-2.1.5.ebuild:
  Restore backwards compatibility with Rails 2.3.5.

  24 Mar 2010; Hans de Graaff <graaff@gentoo.org> -authlogic-2.1.2.ebuild:
  Remove old version.

*authlogic-2.1.3 (31 Dec 2009)

  31 Dec 2009; Hans de Graaff <graaff@gentoo.org> +authlogic-2.1.3.ebuild:
  Version bump. Convert to ruby-fakegem.

  20 Dec 2009; Hans de Graaff <graaff@gentoo.org> -authlogic-2.0.13.ebuild,
  -authlogic-2.1.1.ebuild:
  Remove old versions.

*authlogic-2.1.2 (25 Sep 2009)

  25 Sep 2009; Hans de Graaff <graaff@gentoo.org> +authlogic-2.1.2.ebuild:
  Version bump.

*authlogic-2.1.1 (31 Aug 2009)

  31 Aug 2009; Hans de Graaff <graaff@gentoo.org> +authlogic-2.1.1.ebuild:
  Version bump with minor bug fixes.

  13 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog: