@@ -5,13 +5,15 @@ AUX authlogic-2.1.6-quote-email.patch 1451 RMD160 4a1e51da76279cf5510950b587204d
 AUX authlogic-2.1.6-rails3-1.patch 739 RMD160 2812814cffc3fd55ccb80c9b0569bbb04fe9000d SHA1 6d45d6cedb1872be88598d70487c8e62ebc0c45a SHA256 359fe5d2e1c81d21c902629d4366ca9721f5b5299a291a6b9589180e65802c8c
 AUX authlogic-2.1.6-rails3-2.patch 744 RMD160 7410887e4da9f1e83619253fb786088dfca134cb SHA1 0907ef874f4a025617989ea89ac144468fa76269 SHA256 6763c2113dda04680a99fd6d99635ded66463570c6d1c275b1b7cd4678b0ba54
 DIST authlogic-2.1.6.gem 74752 RMD160 f9c081d23c363766bf22870521d32b368ea3b51b SHA1 499827ac35d5ae925025224ce42a9787d07efa65 SHA256 af9cc2b76501338ac1cfa43104e80d9eb863e2c1c2699c8fbfa8a1197f0edb17
+DIST authlogic-3.0.3.gem 68096 RMD160 854b7ddcbec0d080cd6dd84ee9d566a80b58966a SHA1 a90ae20af487e6ca21671049f39af4112dbbb6ed SHA256 f50101e58cc4383e1513a0dd9dd8a33a1ce40ab0c65eb297b4c7c187490b7c96
 EBUILD authlogic-2.1.6-r2.ebuild 864 RMD160 8fa7dea5fbd0b15c9b77a1c1030e75e4f9c2b239 SHA1 1e74f5d8581308ca67492169135c22748df87fc3 SHA256 825cca169b77b0ca117c19066494a30dc795c91bae734cc76424d2e64ae843fc
-MISC ChangeLog 2189 RMD160 94f51789951f8c2e81b750bcb23ddb40b33433a3 SHA1 ae57e46f68fa076fdc0c4b41e427e9e5338d931c SHA256 dcd206ce4a85e1336bbe25db02b6e3fc6109f7874380c5057c442a28128ba3f8
+EBUILD authlogic-3.0.3.ebuild 783 RMD160 799d32ea93190e4ad40c73f8be858463168d60b6 SHA1 c34e828f279708b806128d8374bfdf92fe83b632 SHA256 31b68b9ba496126055ed581682560e7464eb7d7f708ca0d8a27624d8eb60317f
+MISC ChangeLog 2313 RMD160 be7f22ae4c16f570c086166ba6b56e86be99ce35 SHA1 596b5205648edb2c10fde7ed9e47115098cebaeb SHA256 ba3da5d91ecc90ba63ae41db69157bc82e1240f590156e50af42c27c7bb67448
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk4EofUACgkQrnu0mw69JkrXzwD+Kz4YbgqC8CTVN88nt96TUss7
-tSSk+6t3/PowD/hkuSIA/iz1T3ggap1K0Frb0nCd+5dZ34VGeaqwYGgoncGGR9Oa
-=uafC
+iF0EAREIAAYFAk4Nuk0ACgkQiIP6VqMIqNdqFAD4gDNPGxGzUz6W7qyERnVqPDlj
+E5o9M3RG6e3bPROMIQEAlbkxX+wvn2dbZvyZl+xgoGPPoW/GRVHd4l7utvcNxV4=
+=RbIl
 -----END PGP SIGNATURE-----
