@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/authlogic
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 
+*authlogic-3.0.3 (01 Jul 2011)
+
+  01 Jul 2011; Hans de Graaff <graaff@gentoo.org> +authlogic-3.0.3.ebuild:
+  Version bump.
+
   24 Jun 2011; Hans de Graaff <graaff@gentoo.org> -authlogic-2.1.6.ebuild,
   -authlogic-2.1.6-r1.ebuild:
   Remove old versions.
